<resources>
    <string name="app_name" translatable="false">Low Brightness</string>
    <string name="app_version">Version %1$s (%2$d)</string>
    <string name="app_description">Decrease or increase your screen brightness by using our app! 🔆</string>
    <string name="made_in">Made with ❤ in Romania!</string>
    <string name="privacy_and_security">Privacy and security</string>
    <string name="copyright">© Copyright %1s, made by D4rK!</string>
    <string name="license_sum" translatable="false">General Public License-3.0</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="xda" translatable="false">XDA</string>
    <string name="twitter" translatable="false">Twitter</string>
    <string name="youtube" translatable="false">YouTube</string>
    <string name="android_studio_tutorials_java" translatable="false">Android Studio Tutorials: Java Edition</string>
    <string name="android_studio_tutorials_kotlin" translatable="false">Android Studio Tutorials: Kotlin Edition</string>
    <string name="music_sleep_timer" translatable="false">Music Sleep Timer Plus</string>
    <string name="english_with_lidia" translatable="false">English with Lidia Plus</string>
    <string name="qr_code_scanner" translatable="false">QR &amp; Bar Code Scanner Plus</string>
    <string name="cleaner_plus" translatable="false">Cleaner Plus</string>
    <string name="cart_calculator" translatable="false">Cart Calculator</string>
    <string name="arch" translatable="false">Arch:</string>
    <string name="enable_scheduler">Enable scheduler</string>
    <string name="disable_scheduler">Disable scheduler</string>
    <string name="enabled_only_during_this_interval">Enabled only during this interval:</string>
    <string name="brightness_sum">Define how strong the overlay filter should be. Higher levels are recommended for night time reading.</string>
    <string name="filter_sum">Select the color that you think is least distracting to your eyes and has enough contrast with the apps, typically visible on the screen.</string>
    <string name="schedule">Schedule</string>
    <string name="time_remaining_to_darken_label">Screen brightness will be reduced in</string>
    <string name="time_remaining_to_lighten_label">Original brightness will be restored in</string>
    <string name="customize_overlay_color">Filter overlay color</string>
    <string name="intensity">Brightness optimization level</string>
    <string name="scheduler_description">Schedule the period when the screen should automatically darken, to reduce eye strain and make it more comfortable to read in dark environments.</string>
    <string name="dev_feedback">Mail to dev</string>
    <string name="feedback">Feedback</string>
    <string name="rate_us">Rate our app!</string>
    <string name="ad">Ads</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="code_of_conduct">Code of Conduct</string>
    <string name="more_apps">More apps…</string>
    <string name="changelog">Changelog</string>
    <string name="normal">Normal</string>
    <string name="internet">Internet [INTERNET]</string>
    <string name="settings">Settings</string>
    <string name="permissions">Permissions</string>
    <string name="check_for_updates">Check for updates…</string>
    <string name="more">More</string>
    <string name="theme">Theme</string>
    <string name="google_dev">Google Dev</string>
    <string name="open_me">Open me :)</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="app_updates">App updates</string>
    <string name="subscribe_to_beta">Subscribe to beta updates</string>
    <string name="share">Share</string>
    <string name="share_subject">Try it now!!!</string>
    <string name="share_using">Share using…</string>
    <string name="support_me">Support me</string>
    <string name="license">License</string>
    <string name="runtime">Runtime</string>
    <string name="schedule_exact_alarm">Schedule exact alarm [SCHEDULE_EXACT_ALARM]</string>
    <string name="schedule_exact_alarm_sum">Used to show app notification.</string>
    <string name="foreground_service_sum">Used to make app run in background and monitoring brightness.</string>
    <string name="write_settings">Write settings [WRITE_SETTINGS]</string>
    <string name="write_settings_sum">Used to have access for changing brightness.</string>
    <string name="receive_boot_completed">Receive boot completed [RECEIVE_BOOT_COMPLETED]</string>
    <string name="receive_boot_completed_sum">Used to make app boot.</string>
    <string name="appearance">Appearance</string>
    <string name="app_needs_permission_title">App needs permission</string>
    <string name="app_needs_permission_message">Applying a color light filter to overlay the screen, requires a special permission called "Display over other apps" [SYSTEM_ALERT_WINDOW]. \n\nPlease, allow this permission on the next screen so that the blue light filter can be applied.</string>
    <string name="allow_permission">Allow permission</string>
    <string name="notification_title">Color light filter active</string>
    <string name="notification_context">Tap to edit settings or disable</string>
    <string name="ad_id">Ad id [AD_ID]</string>
    <string name="ad_id_sum">Used to allow ads to be shown in Android 13+ devices.</string>
    <string name="system_alert_window">System alert window [SYSTEM_ALERT_WINDOW]</string>
    <string name="system_alert_window_sum">Used to allow app draw over other apps.</string>
    <string name="post_notifications">Post notifications [POST_NOTIFICATIONS]</string>
    <string name="post_notifications_sum">Used to allow app show notifications on Android 13+ devices.</string>
    <string name="agree">Agree</string>
    <string name="browse_terms_of_service_and_privacy_policy">Browse the <i><u>Terms of Service</u></i> and <i><u>Privacy Policy</u></i></string>
    <string name="welcome">Welcome</string>
    <string name="copied_to_clipboard">Copied to clipboard!</string>
    <string name="recommended">Recommended</string>
    <string name="language">Language</string>
    <string name="system_default">System default</string>
    <string name="current_language">Current in-app language is %1$s!</string>
    <string name="all_languages">All languages</string>
    <string name="music">Music</string>
    <string name="info">Info</string>
    <string name="device_info">Device Info</string>
    <string name="app_build">App Build: Release\n%1$s\n%2$s\n%3$s\n%4$s\n%5$s</string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="device_model">Device Model:</string>
    <string name="android_version">Android Version:</string>
    <string name="api_level">API Level:</string>
    <string name="follow_system">Follow System Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="auto_battery_mode">Auto Battery Dark Mode</string>
    <string name="faq">FAQ</string>
    <string name="select_a_color">Select a color</string>
    <string name="notifications">Notifications</string>
    <string name="notification_settings">Notification settings</string>
    <string name="app_usage_notifications">App Usage Notifications</string>
    <string name="update_notifications">Update Notifications</string>
    <string name="firebase">Firebase</string>
    <string name="advanced">Advanced</string>
    <string name="screen_overlay_notifications">Screen Overlay Notifications</string>
    <string name="close">Close?</string>
    <string name="check_license">Check license [CHECK_LICENSE]</string>
    <string name="foreground_service">Foreground service [FOREGROUND_SERVICE]</string>
    <string name="access_notification_policy">Access notification policy [ACCESS_NOTIFICATION_POLICY]</string>
    <string name="access_network_state">Access network state [ACCESS_NETWORK_STATE]</string>
    <string name="question_1">What is Low Brightness?</string>
    <string name="question_2">Is Low Brightness free to use?</string>
    <string name="question_3">How do I install Low Brightness on my Android device?</string>
    <string name="question_4">How do I use Low Brightness to adjust my screen brightness?</string>
    <string name="question_5">Can Low Brightness be used on all Android devices?</string>
    <string name="question_6">Does Low Brightness require any special permissions?</string>
    <string name="question_7">Is Low Brightness safe to use?</string>
    <string name="question_8">Can I contribute to the Low Brightness project?</string>
    <string name="question_9">Where can I get more help or support for Low Brightness?</string>
    <string name="notification_last_time_used_title">It\'s been a while!</string>
    <string name="notification_update_title">A new update available!</string>
    <string name="summary_close">Are you sure you want to exit?</string>
    <string name="summary_preference_faq_1">Low Brightness is an open-source Android app that allows users to set the screen brightness of their device to a lower level than the default setting, potentially saving battery life and reducing strain on the eyes.</string>
    <string name="summary_preference_faq_2">Yes, Low Brightness is free to download and use. It is an open-source project, so the source code is also available for anyone to view or contribute to.</string>
    <string name="summary_preference_faq_3">Low Brightness can be downloaded from the Google Play Store or from the Low Brightness website. Simply search for "Low Brightness" in the Play Store app or visit the website and follow the instructions to download and install the app.</string>
    <string name="summary_preference_faq_4">After installing Low Brightness, open the app and use the slider to adjust the screen brightness to your desired level.</string>
    <string name="summary_preference_faq_5">Low Brightness is compatible with most Android devices running Android 8.0 or higher. However, some device manufacturers may have customized their version of Android in a way that prevents the app from working properly. In this case, you may need to try a different method for adjusting screen brightness.</string>
    <string name="summary_preference_faq_6">Low Brightness requires the "Write Settings" permission to be able to change the screen brightness on your device. This permission is requested when you first install the app, and you will need to grant it in order to use the app.</string>
    <string name="summary_preference_faq_7">Low Brightness is a safe and secure app. It has been thoroughly tested and does not contain any malware or other harmful code. However, as with any app, it is always a good idea to exercise caution when downloading and installing software from the internet.</string>
    <string name="summary_preference_settings_firebase">This let us collect information about app performance and crash logs.</string>
    <string name="summary_preference_settings_language">Set application language.</string>
    <string name="summary_preference_settings_support_me">Click here if you want to support me without paying money. Just some time for viewing an ad.</string>
    <string name="summary_preference_permissions_check_license">Used to verify that the app is being used in accordance with the terms of the license agreement, and to enforce licensing terms and protect intellectual property.</string>
    <string name="summary_preference_permissions_access_notification_policy">Used to access and modify the notification policy of the device, controlling how and when notifications are shown to the user and providing custom notification management features.</string>
    <string name="summary_preference_permissions_internet">Used to send error reports.</string>
</resources>