<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.preference.PreferenceCategory
        app:title="@string/appearance"
        android:icon="@drawable/ic_appearance_tinted">
        <androidx.preference.ListPreference
            app:defaultValue="@string/default_value_theme"
            app:entries="@array/preference_theme_entries"
            app:entryValues="@array/preference_theme_values"
            app:icon="@drawable/ic_theme"
            app:key="@string/key_theme"
            app:title="@string/theme"
            app:useSimpleSummaryProvider="true"/>
        <androidx.preference.ListPreference
            app:title="@string/language"
            app:summary="@string/summary_preference_settings_language"
            app:key="@string/key_language"
            app:icon="@drawable/ic_language"
            app:entries="@array/preference_language_entries"
            app:entryValues="@array/preference_language_values"
            app:defaultValue="@string/default_value_language"/>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        app:title="@string/notifications"
        app:icon="@drawable/ic_notifications_tinted">
        <androidx.preference.Preference
            app:key="@string/key_notifications_settings"
            app:icon="@drawable/ic_edit_notifications"
            app:title="@string/notification_settings"/>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        app:title="@string/advanced"
        app:icon="@drawable/ic_build_tinted">
        <androidx.preference.SwitchPreferenceCompat
            app:title="@string/firebase"
            app:key="@string/key_firebase"
            app:defaultValue="true"
            app:summary="@string/summary_preference_settings_firebase"
            app:icon="@drawable/ic_firebase"/>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        app:title="@string/app_updates"
        android:icon="@drawable/ic_play_store_tinted">
        <androidx.preference.Preference
            android:icon="@drawable/ic_update"
            app:title="@string/check_for_updates">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/details?id=com.d4rk.lowbrightness"/>
        </androidx.preference.Preference>
        <androidx.preference.Preference
            android:icon="@drawable/ic_experimental"
            app:title="@string/subscribe_to_beta">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/apps/testing/com.d4rk.lowbrightness"/>
        </androidx.preference.Preference>
        <androidx.preference.Preference
            app:key="@string/key_changelog"
            android:icon="@drawable/ic_changelog"
            app:title="@string/changelog"/>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        app:title="@string/privacy_and_security"
        android:icon="@drawable/ic_safety_check_tinted">
        <androidx.preference.Preference
            android:icon="@drawable/ic_privacy_policy"
            app:title="@string/privacy_policy">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://sites.google.com/view/d4rk7355608/more/apps/privacy-policy"/>
        </androidx.preference.Preference>
        <androidx.preference.Preference
            android:icon="@drawable/ic_terms_of_service"
            app:title="@string/terms_of_service">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://sites.google.com/view/d4rk7355608/more/apps/terms-of-service"/>
        </androidx.preference.Preference>
        <androidx.preference.Preference
            android:icon="@drawable/ic_code_of_conduct"
            app:title="@string/code_of_conduct">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://sites.google.com/view/d4rk7355608/more/code-of-conduct"/>
        </androidx.preference.Preference>
        <androidx.preference.Preference
            android:icon="@drawable/ic_permissions"
            app:title="@string/permissions">
            <intent
                android:targetPackage="com.d4rk.lowbrightness"
                android:targetClass="com.d4rk.lowbrightness.ui.settings.permissions.PermissionsActivity"/>
        </androidx.preference.Preference>
        <androidx.preference.Preference
            app:key="open_source_licenses"
            app:title="@string/oss_license_title"
            app:icon="@drawable/ic_libraries"/>
        <androidx.preference.Preference
            android:icon="@drawable/ic_license"
            app:title="@string/license"
            android:summary="@string/license_sum">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://www.gnu.org/licenses/gpl-3.0"/>
        </androidx.preference.Preference>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        app:title="@string/more"
        android:icon="@drawable/ic_more">
        <androidx.preference.Preference
            app:key="@string/key_share"
            android:icon="@drawable/ic_share"
            app:title="@string/share"/>
        <androidx.preference.Preference
            app:icon="@drawable/ic_shop"
            app:title="@string/more_apps">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/dev?id=5390214922640123642"/>
        </androidx.preference.Preference>
        <androidx.preference.Preference
            android:icon="@drawable/ic_support"
            app:title="@string/support_me"
            android:summary="@string/summary_preference_settings_support_me">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://bit.ly/3p8bpjj"/>
        </androidx.preference.Preference>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        app:title="@string/info"
        app:icon="@drawable/ic_about">
        <androidx.preference.Preference
            app:icon="@drawable/ic_perm_device_information"
            app:key="@string/key_device_info"
            app:title="@string/device_info"
            app:summary="%1$s"/>
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>