<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.d4rk.lowbrightness.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>
    <fragment
        android:id="@+id/nav_about"
        android:name="com.d4rk.lowbrightness.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about"/>
    <activity
        android:id="@+id/nav_help"
        android:name="com.d4rk.lowbrightness.ui.help.HelpActivity"
        android:label="@string/help"
        tools:layout="@layout/activity_help"/>
    <activity
        android:id="@+id/nav_settings"
        android:name="com.d4rk.lowbrightness.ui.settings.SettingsActivity"
        android:label="@string/settings"/>
</navigation>